# DAQC

./: CMakeLists.txt  README.md  install_packages.sh
lib/ads1263/Config/: DEV_Config.c
lib/ads1263/Driver/: ADS1263.c
src/core/: basedef.h  controller.c  controller.h  main.c  signal_handler.c  signal_handler.h
src/hw/: adc.c  adc.h  gpio_handler.c  gpio_handler.h  pwm_handler.c  pwm_handler.h  serial_handler.c  serial_handler.h  servo_handler.c  servo_handler.h  sysfs_handler.c  sysfs_handler.h
src/net/: login.c  login.h  net.c  net.h
src/util/: logger.c  logger.h  time_utils.c  time_utils.h  voltage_mapper.c  voltage_mapper.h
